--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
@@ -41,6 +43,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
