feat(all): add Dockerfile & docker-compose.yml. Remove 'src'- prefix from imports modules

--- a/.development.env
+++ b/.development.env
@@ -1,5 +1,5 @@
 PORT=7000
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=my-nest-project-db
 POSTGRES_PASSWORD=root
