--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/node": "18.11.18",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
